feat: 프로젝트 작업 상세페이지 추가 및 결과물 제출 이력 구현